--- a/src/components/ReviewItem/ReviewItem.module.css
+++ b/src/components/ReviewItem/ReviewItem.module.css
@@ -5,6 +5,7 @@
   border: 2px solid #577399;
   border-radius: 12px;
   text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 .author {
